cluster-cd/apps/bitty/media/calibre-web/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: &name calibre-web
    app.kubernetes.io/instance: *name
    app.kubernetes.io/component: *name
    app.kubernetes.io/part-of: *name
    k8s-app: *name
  name: *name
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
      app.kubernetes.io/instance: *name
      app.kubernentes.io/component: *name
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/instance: *name
        app.kubernentes.io/component: *name
      annotations:
        backup.velero.io/backup-volumes: config
        backup.velero.io/backup-volumes-excludes: books,cache
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
        supplementalGroups:
          - 65539
      containers:
        - name: calibre
          image: ghcr.io/linuxserver/calibre:7.22.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 2048Mi
            requests:
              memory: 1024Mi
          securityContext:
            # allowPrivilegeEscalation: false
            runAsUser: 0
            # seccompProfile:
            #   type: RuntimeDefault
            # capabilities:
            #   drop:
            #     - ALL
          ports:
            - name: calibre
              containerPort: 8080
              protocol: TCP
            - name: calserver
              containerPort: 8081
              protocol: TCP
          livenessProbe: &calprobe
            httpGet:
              path: /
              port: calibre
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            timeoutSeconds: 2
          readinessProbe: *calprobe
          startupProbe: *calprobe
          volumeMounts:
            - mountPath: /config
              name: calibre-config
            - mountPath: /media/books
              name: books
        - name: calibre-web
          image: ghcr.io/bjw-s/calibre-web:0.6.23@sha256:4f4385e4348975a15dce6180c1ceb29e6f973e9acb1891df3b5a50eb399d552e
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 8192Mi
            requests:
              memory: 4096Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8083
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /calibre
              name: calibre-config
            - mountPath: /media/books
              name: books
            - mountPath: /cache
              name: cache
        - name: readarr-hook
          image: ghcr.io/rtrox/readarr-calibre-tag-manager-dev:sha-8c36a29-20241109175929
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - name: hook
              containerPort: 8082
              protocol: TCP
          args:
            - --config=/hook-config/config.yaml
          # livenessProbe: &probe
          #   httpGet:
          #     path: /healthz
          #     port: hook
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   timeoutSeconds: 2
          # readinessProbe: *probe
          # startupProbe: *probe
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /calibre
              name: calibre-config
            - mountPath: /hook-config
              readOnly: true
              name: hook-config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: calibre-web
        - name: calibre-config
          persistentVolumeClaim:
            claimName: calibre
        - name: books
          nfs:
            server: ${NFS_SERVER}
            path: /mnt/rusty/media/books
        - name: cache
          emptyDir: {}
        - name: hook-config
          secret:
            secretName: readarr-hook-config-secret
