cluster-cd/apps/bitty/media/calibre-web/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &name calibre-web
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8083
    - name: hook
      port: 8080
  selector:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
---
