cluster-cd/apps/bitty/media/calibre-web/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    ingress: "externaldns"
    # nginx.ingress.kubernetes.io/auth-url: |-
    #     https://$host/oauth2/auth
    # # If you're using domain-level auth, use the authentication URL instead of the application URL
    # nginx.ingress.kubernetes.io/auth-signin: |-
    #      https://$host/oauth2/start?rd=$escaped_request_uri
    # nginx.ingress.kubernetes.io/auth-response-headers: |-
    #     Set-Cookie,Authorization,X-Auth-Request-User,X-Auth-Request-Email,X-Auth-Request-Groups,X-Auth-Request-Preferred-Username
  labels:
    app.kubernetes.io/instance: &name calibre-web
    app.kubernetes.io/name: *name
  name: *name
spec:
  ingressClassName: nginx
  rules:
    - host: &host books.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: *name
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: calibre-web-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: &namekobo calibre-web-kobo
    app.kubernetes.io/name: *namekobo
  name: *namekobo
spec:
  ingressClassName: nginx
  rules:
    - host: &host books.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: calibre-web
                port:
                  name: http
            path: /kobo
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: calibre-web-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    ingress: "externaldns"
  labels:
    app.kubernetes.io/instance: &namecal calibre
    app.kubernetes.io/name: *namecal
  name: *namecal
spec:
  ingressClassName: nginx
  rules:
    - host: &host books-backend.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: calibre-web
                port:
                  name: calibre
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: calibre-tls
